--- a/app/templates/admin/adminProfile.html
+++ b/app/templates/admin/adminProfile.html
@@ -7,24 +7,24 @@
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
-                <input type="text" name="username" value="{{ admin_data.userName }}" readonly><br>
+                <input value="{{ admin_data.userName }}" readonly><br>
                 
                 <label>Staff ID</label>
-                <input type="text" name="userid" value="{{ admin_data.userId }}" readonly><br>
+                <input value="{{ admin_data.userId }}" readonly><br>
 
                 <label>Email Address</label>
-                <input type="text" name="email" value="{{ admin_data.userEmail }}" readonly>
+                <input value="{{ admin_data.userEmail }}" readonly>
             </div>
 
             <div class="form-middle">
                 <label>Gender</label>
-                <input type="text" name="gender" value="{{ admin_data.userGender }}" readonly><br>
+                <input  value="{{ admin_data.userGender }}" readonly><br>
 
                 <label>Role Based</label>
-                <input type="text" name="role", value="{{ ADMIN }}" readonly><br>
+                <input value="ADMIN" readonly><br>
 
                 <label>Department</label>
-                <input type="text" name="department", value="{{ admin_data.userDepartment }}" readonly>
+                <input value="{{ admin_data.userDepartment }}" readonly>
             </div>
 
             <div class="form-right">
