--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -31,11 +31,11 @@
                 </a>
                 <a href="{{ url_for('admin_manageDepartment') }}" class="tab-link {% if active_tab == 'admin_manageDepartmenttab' %}active{% endif %}">
                     <i class="fas fa-building-columns"></i>
-                    <span>Manage Department</span>
+                    <span>(D)Manage Department</span>
                 </a>
                 <a href="{{ url_for('admin_manageVenue') }}" class="tab-link {% if active_tab == 'admin_manageVenuetab' %}active{% endif %}">
                     <i class="fas fa-school"></i>
-                    <span>Manage Venue</span>
+                    <span>(D)Manage Venue</span>
                 </a>
                 <a href="{{ url_for('admin_manageExam') }}" class="tab-link {% if active_tab == 'admin_manageExamtab' %}active{% endif %}">
                     <i class="fas fa-clipboard-list"></i>
@@ -51,15 +51,15 @@
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-business-time"></i>
-                    <span>Manage Invigilation Timetable</span>
+                    <span>(D)Manage Invigilation Timetable</span>
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationReport') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-file-signature"></i>
-                    <span>Manage Invigilation Report</span>
+                    <span>(D)Manage Invigilation Report</span>
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
                     <i class="fas fa-id-badge"></i>
-                    <span>Profile</span>
+                    <span>(D)Profile</span>
                 </a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">
                     <i class="fas fa-right-from-bracket"></i>
