--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -59,6 +59,7 @@
                             Upload a file with an empty first row. Data should start from columns A to H,<br>
                             labeled as: ['Department Code', 'Course Code', 'Course Section', 'Course Name', 'Credit Hour', 'Practical Lecturer', 'Tutorial Lecturer', 'No of Students']<br><br><br>
                             Click to upload or drag and drop with below file format
+                            <button onclick="downloadExcel()">Download Template</button>
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
                         <div id="courseSelectedFileName" class="file-name-display"></div>
@@ -88,6 +89,19 @@
                 </div>
             </div>
         </div>
+
+        <script>
+            function downloadExcel() {
+                const worksheet = XLSX.utils.aoa_to_sheet([
+                ["Name", "Email", "Age"],
+                ["(Put name here)", "(Put email here)", "(Put age here)"]
+                ]);
+                const workbook = XLSX.utils.book_new();
+                XLSX.utils.book_append_sheet(workbook, worksheet, "Template");
+
+                XLSX.writeFile(workbook, "user_template.xlsx");
+            }
+        </script>
     </form>
 
     <!-- Manual Form -->
