--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -69,7 +69,7 @@
         </nav>
 
         <main class="main-content">
-            {% block title %}{% endblock %}
+            {% block head_title %}{% endblock %}
             <br><br>
 
             <!-- Flash Message Section -->
