--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -2,7 +2,7 @@
 {% set show_tabs = true %}
 {% block title %}Admin ManageCourse{% endblock %}
 
-{% block title %}<h2>Manage Course</h2>{% endblock %}
+{% block head_title %}<h2>Manage Course</h2>{% endblock %}
 
 {% block announce_section %}
 <!-- Announce Form -->
